--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@
                             <div class="contact-icon">🌐</div>
                             <div>
                                 <h4>Website</h4>
-                                <p>www.nexeraconsultancy.in</p>
+                                <p>www.nexerasoftwares.in</p>
                             </div>
                         </div>
                     </div>
